<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <Button
		android:id="@+id/configConnection"
		android:text="@string/configConnection"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
    
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/videoPermissions" />
	    
	<Spinner 
        android:id="@+id/videoPermissionsSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/groupPrompt" />
        
    <Button
		android:id="@+id/saveConfig"
		android:text="@string/ok"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	    
</LinearLayout>