<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/serverUrlText" />
	    
	<EditText
		android:id="@+id/serverUrl"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/emailText" />
	    
	<EditText
		android:id="@+id/email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/passwordText" />
	    
	<EditText
		android:id="@+id/password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
        
    <Button
		android:id="@+id/saveConnectionConfig"
		android:text="@string/ok"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	    	    
</LinearLayout>
